--- a/frontendAndroid/passengerAndroid/app/src/main/res/values/strings.xml
+++ b/frontendAndroid/passengerAndroid/app/src/main/res/values/strings.xml
@@ -1,6 +1,16 @@
 <resources>
-    <string name="app_name">EventRegistration-Android</string>
+    <string name="app_name">PassengerApp</string>
     <string name="action_settings">Settings</string>
-    <string name="newparticipant_hint">Who?</string>
-    <string name="newparticipant_button">Add Participant</string>
+    <string name="driver_app_welcome_text">Passenger Application</string>
+    <string name="register_button">REGISTER</string>
+    <string name="password_label">Password</string>
+    <string name="username_label">Username</string>
+    <string name="login_label">LOGIN</string>
+    <string name="start_location_label">Start location :</string>
+    <string name="end_location_label">End location :</string>
+    <string name="number_passenger_label">Number of passengers :</string>
+    <string name="select_pickup_time">Select pickup time</string>
+    <string name="price_per_pass_label">Price per passenger :</string>
+    <string name="add_journey_button">Add journey</string>
+    <string name="edit_journey_button">Edit journey</string>
 </resources>
