--- a/frontendAndroid/passengerAndroid/app/src/main/res/values/strings.xml
+++ b/frontendAndroid/passengerAndroid/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">PassengerApp</string>
     <string name="action_settings">Settings</string>
     <string name="register_welcome_text">Passenger Registration</string>
+    <string name="home_welcome_text">Please choose to Login or Register</string>
     <string name="register_button">REGISTER</string>
     <string name="password_label">Password</string>
     <string name="username_label">Username</string>
