--- a/frontendAndroid/DriverApp/app/src/main/res/values/strings.xml
+++ b/frontendAndroid/DriverApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DriverApp</string>
+    <string name="app_name">Driver Application</string>
     <string name="action_settings">Settings</string>
     <string name="driver_app_welcome_text">Driver Application</string>
     <string name="register_button">REGISTER</string>
@@ -13,4 +13,19 @@
     <string name="price_per_pass_label">Price per passenger :</string>
     <string name="add_journey_button">Add journey</string>
     <string name="edit_journey_button">Edit journey</string>
+    <string name="view_journeys_button">View Journeys</string>
+    <string name="my_profile_button">My profile</string>
+    <string name="driver_name_holder">Driver Name</string>
+    <string name="weather_holder">Weather status</string>
+    <string name="cancel_button">Cancel</string>
+    <string name="full_name_label">Full Name :</string>
+    <string name="username_profile">Username :</string>
+    <string name="password_profile">Password :</string>
+    <string name="car_model_label">Car model :</string>
+    <string name="rating_label">Rating :</string>
+    <string name="num_journeys_label">Number of journeys :</string>
+    <string name="back_button">Back</string>
+    <string name="save_button">Save changes</string>
+    <string name="logout_button">Logout</string>
+    <string name="splash_text">Driver Application</string>
 </resources>
