--- a/frontendAndroid/DriverApp/app/src/main/res/values/strings.xml
+++ b/frontendAndroid/DriverApp/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="register_button">REGISTER</string>
     <string name="password_label">Password</string>
     <string name="username_label">Username</string>
+    <string name="date_label">Date</string>
     <string name="login_label">LOGIN</string>
     <string name="start_location_label">Start location :</string>
     <string name="end_location_label">End location :</string>
