--- a/frontendAndroid/passengerAndroid/app/src/main/res/values/strings.xml
+++ b/frontendAndroid/passengerAndroid/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="register_button">REGISTER</string>
     <string name="password_label">Password</string>
     <string name="username_label">Username</string>
-    <string name="name_label">Username</string>
+    <string name="name_label">Name</string>
     <string name="login_label">LOGIN</string>
     <string name="start_location_label">Start location :</string>
     <string name="end_location_label">End location :</string>
