--- a/frontendAndroid/DriverApp/app/src/main/res/values/strings.xml
+++ b/frontendAndroid/DriverApp/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="driver_app_welcome_text">Driver Application</string>
     <string name="register_button">REGISTER</string>
     <string name="password_label">Password</string>
+    <string name="full_name_label">Full name</string>
     <string name="username_label">Username</string>
     <string name="car_model_label">Car Model</string>
     <string name="date_label">Date</string>
@@ -18,9 +19,10 @@
     <string name="view_journeys_button">View Journeys</string>
     <string name="my_profile_button">My profile</string>
     <string name="driver_name_holder">Driver Name</string>
+    <string name="age_label">Age</string>
     <string name="weather_holder">Weather status</string>
     <string name="cancel_button">Cancel</string>
-    <string name="full_name_label">Full Name :</string>
+    <string name="full_name_profile">Full Name :</string>
     <string name="username_profile">Username :</string>
     <string name="password_profile">Password :</string>
     <string name="rating_label">Rating :</string>
