first attempt at SearchActivity logic in passengerApp

--- a/frontendAndroid/passengerAndroid/app/src/main/res/values/strings.xml
+++ b/frontendAndroid/passengerAndroid/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="car_model_button">CAR MODEL</string>
     <string name="price_button">PRICE</string>
     <string name="search_button">SEARCH</string>
+    <string name="journey_search_hint">Destination City</string>
 </resources>
